# jobscout

./: README.md  app.py  main.py  pyproject.toml
src/.adk/: session.db
src/agents/: agent.py  hf_agent.py
src/agents/.adk/: session.db
src/config/: settings.py
