[project]
name = "job-scout"
version = "0.1.0"
description = "AI-powered Gmail Assistant that help match job postings to resumes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=2.3.0",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "google-genai>=2.9.0",
    "huggingface-hub>=1.21.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
]
